Fixed layout problems for smaller screens. Created new CSS-file and HTML-file for this.

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,20 @@
 
 body {
     font-family: 'Barlow', sans-serif;
+    width: 100vh;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.hero-img {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+
 }
 
 html { 
